# RustSendGridSample

./: README.md
sendgridlib/: Cargo.toml
sendgridlib/src/: main.rs
smtp/: Cargo.toml
smtp/src/multipart/: main.rs
smtp/src/textonly/: main.rs
