[package]
name = "smtp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "textonly"
path = "src/textonly/main.rs"

[[bin]]
name = "multipart"
path = "src/multipart/main.rs"

[dependencies]
lettre = "0.10.0"